force-app/main/default/objects/PDLM__Phase__c/PDLM__Phase__c.object-meta.xml
<CustomObject>
    <description>Indicate Phases that make up a Lifecycle</description>
    <label>Phase</label>
    <nameField>
        <label>Phase Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Phases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>