force-app/main/default/objects/PDLM__Phase__c/fields/PDLM__Auto_Submit_For_Approval__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Auto_Submit_For_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If set to true, the system automatically submits for approval when the change lands in this phase.</description>
    <inlineHelpText>Designates whether this phase automatically submits for approval.</inlineHelpText>
    <label>Auto Submit For Approval</label>
    <type>Checkbox</type>
</CustomField>