force-app/main/default/objects/PDLM__Phase__c/fields/PDLM__Change_Order__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Change_Order__c</fullName>
    <inlineHelpText>List of objects which require Approval for changes at this phase</inlineHelpText>
    <label>Approval Required</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>