force-app/main/default/objects/PDLM__Phase__c/fields/PDLM__Child_Phases__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Child_Phases__c</fullName>
    <inlineHelpText>List of phases a child record is allowed to be in when parent is in this phase, in JSON format.</inlineHelpText>
    <label>Child Phases</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>