force-app/main/default/objects/PDLM__Phase__c/fields/PDLM__Edit_Detail_Tab__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Edit_Detail_Tab__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Edit Details Tab</label>
    <type>Checkbox</type>
</CustomField>