force-app/main/default/objects/PDLM__Phase__c/fields/PDLM__Edit_During_Approval_Allow_Groups__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Edit_During_Approval_Allow_Groups__c</fullName>
    <inlineHelpText>Specifies comma separated names of Public Groups. When set, only group members are allowed to edit items and affected items while out for approval.</inlineHelpText>
    <label>Edit During Approval Allow Groups</label>
    <length>255</length>
    <type>Text</type>
</CustomField>