force-app/main/default/objects/PDLM__Phase__c/fields/PDLM__Expire_Affected_Items__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Expire_Affected_Items__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Upon entry into this phase, expire the Affected Items, regardless of if it is an approval phase. This is used for Deviations: when a Deviation expires, the Affected Items expire and revert to their previously-released revision.</description>
    <inlineHelpText>Upon entry into this phase, expire the Affected Items, regardless of if it is an approval phase. This is used for Deviations: when a Deviation expires, the Affected Items expire and revert to their previously-released revision.</inlineHelpText>
    <label>Expire Affected Items</label>
    <type>Checkbox</type>
</CustomField>