force-app/main/default/objects/PDLM__Phase__c/fields/PDLM__Is_Obsolete_Phase__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Is_Obsolete_Phase__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disallow users from adding items of this phase to a Training Plan. Auto-remove items from Training Plan when published to this phase.</description>
    <inlineHelpText>Disallow users from adding items of this phase to a Training Plan. Auto-remove items from Training Plan when published to this phase.</inlineHelpText>
    <label>Is Obsolete Phase</label>
    <type>Checkbox</type>
</CustomField>