force-app/main/default/objects/PDLM__Phase__c/fields/PDLM__Revision_Sequence__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Revision_Sequence__c</fullName>
    <description>Comma separated list of revision names. The system will automatically name the next draft revision based on this sequence. If no valid next name in the sequence is found, the system will name the draft &quot;Draft&quot;.</description>
    <inlineHelpText>Comma separated list of revision names. The system will automatically name the next draft revision based on this sequence. If no valid next name in the sequence is found, the system will name the draft &quot;Draft&quot;.</inlineHelpText>
    <label>Revision Sequence</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>