force-app/main/default/objects/PDLM__Phase__c/validationRules/PDLM__Validate_Cancel_Phase.validationRule-meta.xml
<ValidationRule>
    <fullName>PDLM__Validate_Cancel_Phase</fullName>
    <active>true</active>
    <description>Used to validate cancel phases</description>
    <errorConditionFormula>PDLM__Is_Cancel_Phase__c &amp;&amp;(
            PDLM__Is_First_Phase__c ||
            PDLM__Auto_Advance_Phase__c != null ||
            PDLM__Auto_Reject_Phase__c != null ||
            PDLM__Approve_Change_Phase__c ||
            PDLM__Auto_Submit_For_Approval__c ||
            PDLM__Expire_Affected_Items__c )</errorConditionFormula>
    <errorMessage>Cancel Phases cannot have these fields checked or filled: Is First Phase, Auto Advance, Auto Reject, Release Affected Items, and Expire Affected Items.</errorMessage>
</ValidationRule>